# libACA

./: .gitignore  CMakeLists.txt  CMakePresets.json
inc/: AcaAll.h  AudioFileIf.h  ChordFromBlock.h  ClassifierBase.h  KeyFromChroma.h  PitchFromBlock.h  SubFingerprint.h  ToolConversion.h  ToolGmmClassifier.h  ToolInstFreq.h  ToolLowPass.h  ToolNmf.h  ToolPreProc.h  ToolResample.h  ToolSimpleKmeans.h  ToolSimpleKnn.h
inc/helper/: Fft.h  Filter.h  Synthesis.h  Util.h  Vector.h
src/: ACAConfig.h.in
src/ACA/: AcaAll.cpp  BeatHisto.cpp  CMakeLists.txt  Chord.cpp  ChordFromBlock.cpp  Feature.cpp  FeatureFromBlock.cpp  Fft.cpp  Key.cpp  KeyFromChroma.cpp  Novelty.cpp  NoveltyFromBlock.cpp  Pitch.cpp  PitchFromBlock.cpp  Spectrogram.cpp  SubFingerprint.cpp  ToolBlockAudio.cpp  ToolCcf.cpp  ToolFingerprint.cpp  ToolGammatone.cpp  ToolGmm.cpp  ToolGmmClassifier.cpp  ToolLeaveOneOutCrossVal.cpp  ToolNmf.cpp  ToolPca.cpp  ToolSeqFeatureSel.cpp  ToolSimpleDtw.cpp  ToolSimpleKmeans.cpp  ToolSimpleKnn.cpp  ToolViterbi.cpp
src/AudioFileIO/: AudioFile.cpp  AudioFile.h  AudioFileIf.cpp  CMakeLists.txt
src/ComputeBeatHisto/: CMakeLists.txt
src/ComputeChords/: CMakeLists.txt
src/ComputeFeature/: CMakeLists.txt
src/ComputeFingerprint/: CMakeLists.txt
src/ComputeKey/: CMakeLists.txt
src/ComputeMelSpectrogram/: CMakeLists.txt
src/ComputeNoveltyFunction/: CMakeLists.txt
src/ComputePitch/: CMakeLists.txt
src/ComputeSpectrogram/: CMakeLists.txt
src/Tests/TestExec/: CMakeLists.txt  Test.cpp
test/: CMakeLists.txt  Test.cpp  Test_AudioIO.cpp  Test_BeatHisto.cpp  Test_Chords.cpp  Test_Dtw.cpp  Test_Features.cpp  Test_Fft.cpp  Test_Filter.cpp  Test_Key.cpp  Test_Matrix.cpp  Test_Novelty.cpp  Test_Pitch.cpp  Test_RingBuffer.cpp  Test_Spectrogram.cpp  Test_Tools.cpp
